# orvrm

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  docker-test.sh
.github/workflows/: release.yml  rust.yml
config/: default.toml
src/: lib.rs  main.rs
src/api/: mod.rs  routes.rs
src/config/: app_config.rs
src/models/: job.rs  mod.rs  request.rs  response.rs  vehicle.rs
src/services/: mod.rs  osrm.rs  routing.rs
src/utils/: error.rs
tests/: api_test.rs  models_test.rs  services_test.rs  utils_test.rs
