[package]
name = "orvrm"
version = "0.1.0"
edition = "2021"
description = "Open Source Rust Vehicle Route Machine"
authors = ["Maarten Bode"]

[dependencies]
# Web framework
actix-web = "4.4"
actix-rt = "2.9"

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for OSRM API calls
reqwest = { version = "0.11", features = ["json"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Logging
log = "0.4"
env_logger = "0.10"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Configuration
config = "0.13"

# Geo utilities
geo = "0.27"
geo-types = "0.7"

# Optimization algorithms
petgraph = "0.6"  # For graph algorithms

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Utilities
futures = "0.3"
async-trait = "0.1"
uuid = { version = "1.6", features = ["v4", "serde"] }
num_cpus = "1.16"

[dev-dependencies]
mockall = "0.12"
